# VVVVVV

./: .gitattributes  .gitmodules  Dockerfile  LICENSE.md  License exceptions.md  README.md
desktop_version/: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTORS.txt  Dockerfile  Info.plist  README.md  TRANSLATORS.txt  building.md  fixupMac.sh  font.txt  icon.rc  version.cmake
desktop_version/VVVVVV-android/: .gitignore  README.md  build.gradle  gradle.properties
desktop_version/VVVVVV-android/app/: build.gradle
desktop_version/cmake/: GenerateScriptCode.cmake
desktop_version/fonts/: README.txt  buttons_10x10.fontmeta  buttons_12x12.fontmeta  buttons_8x8.fontmeta  font.fontmeta  font.txt  font_ar.fontmeta  font_ja.fontmeta  font_ko.fontmeta  font_ko_license.txt  font_sc.fontmeta  font_sc_tc_license.txt  font_tc.fontmeta
desktop_version/lang/: README-programmers.txt  README-translators.txt  README.txt
desktop_version/lang/ar/: cutscenes.xml  meta.xml  numbers.xml  roomnames.xml  roomnames_special.xml  strings.xml  strings_plural.xml
desktop_version/lang/ca/: cutscenes.xml  meta.xml  numbers.xml  roomnames.xml  roomnames_special.xml  strings.xml  strings_plural.xml
desktop_version/lang/cy/: cutscenes.xml  meta.xml  numbers.xml  roomnames.xml  roomnames_special.xml  strings.xml  strings_plural.xml
desktop_version/lang/de/: cutscenes.xml  meta.xml  numbers.xml  roomnames.xml  roomnames_special.xml  strings.xml  strings_plural.xml
desktop_version/lang/en/: cutscenes.xml  meta.xml  numbers.xml  roomnames_special.xml  strings.xml  strings_plural.xml
desktop_version/lang/eo/: cutscenes.xml  meta.xml  numbers.xml  roomnames.xml  roomnames_special.xml  strings.xml  strings_plural.xml
desktop_version/lang/es/: cutscenes.xml  meta.xml  numbers.xml  roomnames.xml  roomnames_special.xml  strings.xml  strings_plural.xml
desktop_version/lang/es-419/: cutscenes.xml  numbers.xml  roomnames_special.xml  strings.xml  strings_plural.xml
desktop_version/lang/es-ar/: meta.xml  roomnames.xml  roomnames_special.xml  strings.xml  strings_plural.xml
desktop_version/lang/es_419/: cutscenes.xml  meta.xml  numbers.xml  roomnames.xml  strings.xml  strings_plural.xml
desktop_version/lang/es_AR/: cutscenes.xml  meta.xml  strings.xml
desktop_version/lang/fa/: cutscenes.xml  meta.xml  numbers.xml  roomnames.xml  roomnames_special.xml  strings.xml  strings_plural.xml
desktop_version/lang/fr/: cutscenes.xml  meta.xml  numbers.xml  roomnames.xml  roomnames_special.xml  strings.xml  strings_plural.xml
desktop_version/lang/ga/: cutscenes.xml  meta.xml  numbers.xml  roomnames.xml  roomnames_special.xml  strings.xml  strings_plural.xml
desktop_version/lang/gr/: cutscenes.xml
desktop_version/lang/it/: cutscenes.xml  meta.xml  numbers.xml  roomnames.xml  roomnames_special.xml  strings.xml  strings_plural.xml
desktop_version/lang/ja/: cutscenes.xml  meta.xml  numbers.xml  roomnames.xml  roomnames_special.xml  strings.xml  strings_plural.xml
desktop_version/lang/ko/: cutscenes.xml  meta.xml  numbers.xml  roomnames.xml  roomnames_special.xml  strings.xml  strings_plural.xml
desktop_version/lang/nl/: cutscenes.xml  meta.xml  numbers.xml  roomnames.xml  roomnames_special.xml  strings.xml  strings_plural.xml
desktop_version/lang/pl/: cutscenes.xml  meta.xml  numbers.xml  roomnames.xml  roomnames_special.xml  strings.xml  strings_plural.xml
desktop_version/lang/pt_BR/: cutscenes.xml  meta.xml  numbers.xml  roomnames.xml  roomnames_special.xml  strings.xml  strings_plural.xml
desktop_version/lang/pt_PT/: cutscenes.xml  meta.xml  numbers.xml  roomnames.xml  roomnames_special.xml  strings.xml  strings_plural.xml
desktop_version/lang/ru/: cutscenes.xml  meta.xml  numbers.xml  roomnames.xml  roomnames_special.xml  strings.xml  strings_plural.xml
desktop_version/lang/szl/: cutscenes.xml  meta.xml  numbers.xml  roomnames.xml  roomnames_special.xml  strings.xml  strings_plural.xml
desktop_version/lang/tr/: cutscenes.xml  meta.xml  numbers.xml  roomnames.xml  roomnames_special.xml  strings.xml  strings_plural.xml
desktop_version/lang/uk/: cutscenes.xml  meta.xml  numbers.xml  roomnames.xml  roomnames_special.xml  strings.xml  strings_plural.xml
desktop_version/lang/zh/: cutscenes.xml  meta.xml  numbers.xml  roomnames.xml  roomnames_special.xml  strings.xml  strings_plural.xml
desktop_version/lang/zh_TW/: cutscenes.xml  meta.xml  roomnames.xml  roomnames_special.xml  strings.xml  strings_plural.xml
desktop_version/libretro/: CMakeLists.txt  SDL_config.h  SDL_dynapi.h  SDL_libretro.c  SDL_libretro.h  libretro.c  link.T  vvvvvv_libretro.info
desktop_version/lodepng/: lodepng.c
desktop_version/physfs/: README.txt  physfs.h  physfs_archiver_unpacked.c  physfs_byteorder.c  physfs_internal.h  physfs_platform_unix.c  physfs_platform_windows.c
desktop_version/src/: ActionSets.h  Alloc.h  BinaryBlob.cpp  BinaryBlob.h  BlockV.cpp  BlockV.h  ButtonGlyphs.cpp  ButtonGlyphs.h  CWrappers.cpp  CWrappers.h  Constants.h  Credits.h  CustomLevels.cpp  CustomLevels.h  DeferCallbacks.c  DeferCallbacks.h  DiscordNetwork.c  Editor.cpp  Editor.h  Ent.cpp  Ent.h  Entity.cpp  Entity.h  Enums.h  Exit.h  FileSystemUtils.cpp  FileSystemUtils.h  Finalclass.cpp  Finalclass.h  Font.cpp  Font.h  FontBidi.cpp  FontBidi.h  GOGNetwork.c  Game.cpp  Game.h  GlitchrunnerMode.c  GlitchrunnerMode.h  Graphics.cpp  Graphics.h  (+96 more)
desktop_version/src/scripts/: alreadyvisited.vsc  bigopenworld.vsc  bigopenworldskip.vsc  communicationstation.vsc  communicationstationskip.vsc  disableaccessibility.vsc  finallevel_teleporter.vsc  finalterminal_finish.vsc  firststeps.vsc  gamecomplete.vsc  gamecomplete_ending.vsc  int1blue_1.vsc  int1blue_2.vsc  int1blue_3.vsc  int1blue_4.vsc  int1blue_5.vsc  int1blue_6.vsc  int1blue_7.vsc  int1green_1.vsc  int1green_2.vsc  int1green_3.vsc  int1green_4.vsc  int1green_5.vsc  int1green_6.vsc  int1green_7.vsc  int1red_1.vsc  int1red_2.vsc  int1red_3.vsc  int1red_4.vsc  int1red_5.vsc  int1red_6.vsc  int1red_7.vsc  int2_blue.vsc  (+164 more)
desktop_version/utfcpp/: .gitignore  .gitmodules  README.md
(+1377 files in other folders)
